<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Awp Provisioning</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Send ASCII String</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers_config">AUTOCONFIG AWAREPOINT DEVICES</string>
    <string name="btn_getconfig">GET CONFIG</string>
    <string name="btn_push">PUSH</string>
    <string name="btn_push_all">PUSH ALL DEVICES</string>
    <string name="appliance_name">Appliance Name:</string>
    <string name="appliance_user">User Name:</string>
    <string name="appliance_pass">Password:</string>
    <string name="appliance_wifi_cert">WiFi Certificate:</string>

</resources>
